mock-server:init

--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "mock-db": "node mock-server/mock.js > mock-server/db.json",
+    "mock-server": "json-server -w -p 9000 mock-server/db.json"
+  },
   "devDependencies": {
-    "eslint-plugin-react": "latest",
-    "eslint-config-standard-with-typescript": "latest",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "latest",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "latest",
+    "json-server": "^0.17.1"
   }
 }
