--- a/packages/apis/package.json
+++ b/packages/apis/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "axios": "^1.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
