--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.10.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
